--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if(OpenMVS_USE_BREAKPAD)
 	FIND_PACKAGE(BREAKPAD)
 	if(BREAKPAD_FOUND)
 		include_directories(${BREAKPAD_INCLUDE_DIRS})
-		add_definitions(-D_USE_BREAKPAD)
+		add_definitions(${BREAKPAD_DEFINITIONS} -D_USE_BREAKPAD)
 	else()
 		message("-- Can't find BreakPad. Continuing without it.")
 	endif()
@@ -89,7 +89,7 @@ endif()
 FIND_PACKAGE(Eigen ${SYSTEM_PACKAGE_REQUIRED})
 if(EIGEN_FOUND)
 	include_directories(${EIGEN_INCLUDE_DIRS})
-	add_definitions(${EIGEN_DEFINITIONS})
+	add_definitions(${EIGEN_DEFINITIONS} -D_USE_EIGEN)
 endif()
 
 FIND_PACKAGE(OpenCV ${SYSTEM_PACKAGE_REQUIRED})
