--- a/apps/InterfaceOpenMVG/CMakeLists.txt
+++ b/apps/InterfaceOpenMVG/CMakeLists.txt
@@ -1,15 +1,22 @@
-cxx_executable_with_flags_no_pch(InterfaceOpenMVG "Apps" "${cxx_default}" "MVS" InterfaceOpenMVG.cpp)
-if(OpenMVS_USE_BREAKPAD AND BREAKPAD_FOUND)
-	target_link_libraries(InterfaceOpenMVG ${BREAKPAD_LIBS})
-endif()
-
 FIND_PACKAGE(OpenMVG QUIET)
 IF (OPENMVG_FOUND)
 	INCLUDE_DIRECTORIES(${OPENMVG_INCLUDE_DIRS})
-	cxx_executable_with_flags_no_pch(InterfaceOpenMVG2 "Apps" "${cxx_default}" "MVS;${OPENMVG_LIBRARIES}" InterfaceOpenMVG2.cpp)
-	if(OpenMVS_USE_BREAKPAD AND BREAKPAD_FOUND)
-		target_link_libraries(InterfaceOpenMVG2 ${BREAKPAD_LIBS})
-	endif()
+	add_definitions(-D_USE_OPENMVG)
+	set(LIBS_DEPEND "MVS;${OPENMVG_LIBRARIES}")
 ELSE()
-	MESSAGE("OPENMVG_NOT FOUND : OpenMVG importer will not be build")
+	set(LIBS_DEPEND "MVS")
+	MESSAGE("OPENMVG_NOT FOUND : OpenMVG importer with JSON support will not be build")
 ENDIF()
+
+if(MSVC)
+	FILE(GLOB LIBRARY_FILES_C "*.cpp" "*.rc")
+else()
+	FILE(GLOB LIBRARY_FILES_C "*.cpp")
+endif()
+FILE(GLOB LIBRARY_FILES_H "*.h" "*.inl")
+
+cxx_executable_with_flags_no_pch(InterfaceOpenMVG "Apps" "${cxx_default}" "${LIBS_DEPEND}" ${LIBRARY_FILES_C} ${LIBRARY_FILES_H})
+
+if(OpenMVS_USE_BREAKPAD AND BREAKPAD_FOUND)
+	target_link_libraries(InterfaceOpenMVG ${BREAKPAD_LIBS})
+endif()
